# cartocrow

./: CMakeLists.txt  circular_nice_result.ipe  hello.ipe
Edwin_test/: CMakeLists.txt  geophy_test.cpp
cartocrow/: CMakeLists.txt
cartocrow/core/: CMakeLists.txt  circular_arc.cpp  circular_arc.h
cartocrow/flow_map/: CMakeLists.txt  polar_point.cpp
cartocrow/geophylogeny/: CMakeLists.txt  circular_geophylogeny.cpp  circular_geophylogeny.h  circular_painting.cpp  circular_painting.h  color_sites.cpp  color_sites.h  colormap.hpp  geophylogeny_shape.cpp  geophylogeny_shape.h  linear_geophylogeny.cpp  linear_geophylogeny.h  painting.cpp  painting.h
cartocrow/geophylogeny/boundary/: boundary_shape.cpp  boundary_shape.h  circular_boundary.cpp  circular_boundary.h  linear_boundary.cpp  linear_boundary.h
cartocrow/geophylogeny/fixed_positions/: dp_ordener.cpp  dp_ordener.h  dp_ordener_rectangular.cpp  dp_ordener_rectangular.h
cartocrow/geophylogeny/phylo_tree/: geophylogeny.cpp  geophylogeny.h  node.cpp  node.h  site.cpp  site.h  tree.cpp  tree.h
cartocrow/geophylogeny/sliding_positions/: circular_sliding_optimization.cpp  circular_sliding_optimization.h  rectangular_sliding_optimization.cpp  rectangular_sliding_optimization.h
cartocrow/necklace_map/valid_placement/: compute_valid_placement.cpp
cartocrow/renderer/: CMakeLists.txt  geometry_renderer.h  geometry_widget.cpp  geometry_widget.h  ipe_renderer.cpp  ipe_renderer.h  painting_renderer.cpp  painting_renderer.h
data/: europe-population-necklace.json  rwExampleFish.json  rwExampleGreenLizards.json  rwExampleShrubFrogs.json
demos/: CMakeLists.txt
demos/flow_map/: CMakeLists.txt
demos/geophylogeny_demo/: CMakeLists.txt
demos/geophylogeny_demo/circular_geophylogeny/: CMakeLists.txt  circular_geophylogeny.cpp
demos/geophylogeny_demo/data_collection/: CMakeLists.txt  data_collection.cpp  data_collection.h
demos/geophylogeny_demo/geophylogeny_JSON/: CMakeLists.txt  JSON_to_geophylogeny.cpp  JSON_to_geophylogeny.h  geophylogeny_demo.cpp  geophylogeny_demo.h
demos/geophylogeny_demo/rectangular_geophylogeny/: CMakeLists.txt  rectangular_geophylogeny.cpp
figures/: Fish_circ_fixed.ipe  Fish_circ_sliding.ipe  Fish_rect_fixed.ipe  Fish_rect_sliding.ipe  GreenLizards_circ_fixed.ipe  GreenLizards_circ_fixed.ipe.autosave.ipe  GreenLizards_circ_sliding.ipe  GreenLizards_circ_sliding.pdf.autosave.ipe  GreenLizards_rect_fixed.ipe  GreenLizards_rect_fixed.ipe.autosave.ipe  GreenLizards_rect_sliding smaller delta.ipe  GreenLizards_rect_sliding.ipe  GreenLizards_rect_sliding.pdf.autosave.ipe  Lizards_circ_sliding.ipe  Lizards_rect_sliding.ipe  ShrubFrogs_circ_fixed.ipe  ShrubFrogs_circ_sliding.ipe  ShrubFrogs_rect_fixed.ipe  ShrubFrogs_rect_sliding.ipe  circular_example.ipe  circular_nice_result_1.ipe  coloring-example.ipe  coloring-sites-example.ipe  intervals-bad-example.ipe  intervals-good-example.ipe  leaders-example.ipe  leaders-example.pdf.autosave.ipe  n15-clustered.ipe  n15-coastline.ipe  n15-coastline.pdf.autosave.ipe  n15-uniform.ipe  n15-uniform.pdf.autosave.ipe  n30-circular-fixed.ipe  n30-circular-fixed.pdf.autosave.ipe  n30-circular.ipe  n30-rectangular-fixed.ipe  n30-rectangular.ipe  n30-rectangular.pdf.autosave.ipe
metric-results/: example.ipe
metric-results/clustered/average/: average_angle_d1.csv  average_angle_d3.csv  average_euclidean_d1.csv  average_euclidean_d3.csv  average_hor_rad_d1.csv  average_hor_rad_d3.csv  average_spanning_d1.csv  average_spanning_d3.csv
metric-results/clustered/force_fixed/: average_angle_allowed_outside_d1.csv  average_angle_d1.csv  average_angle_d3.csv  average_angle_d3_new.csv  average_euclidean_allowed_outside_d1.csv  average_euclidean_d1.csv  average_euclidean_d3.csv  average_hor_rad_allowed_outside_d1.csv  average_hor_rad_d1.csv  average_hor_rad_d3.csv  average_spanning_allowed_outside_d1.csv  average_spanning_d1.csv  average_spanning_d3.csv  max_angle_allowed_outside_d1.csv  max_angle_d1.csv  max_angle_d3.csv  max_euclidean_d1.csv  max_euclidean_d3.csv  max_hor_rad_allowed_outside_d1.csv  max_hor_rad_d1.csv  max_hor_rad_d3.csv  max_spanning_d1.csv  max_spanning_d3.csv
metric-results/conflicts/: clustered_d1.csv  clustered_d3.csv  coastline_d1.csv  coastline_d3.csv  uniform_d1.csv  uniform_d3.csv
test/: CMakeLists.txt
(+21029 files in other folders)
